[US22] removed code smells